Atualizei uma nova linha no arquivo index.html index1.html

--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,8 @@
     <h2>Meu nome é Diwas Kiangebeni</h2><br>
     <img src="img/diwas.jpg" alt="" width="200"><br><br>
     <img src="img/diwas.jpg" alt="" width="300"><br><br>
-    <img src="img/moledj.jpg" alt="" width="400">
+    <img src="img/moledj.jpg" alt="" width="400"><br>
+    <h1>Estou tentando fazer fork trabalhando com projeto duma outra pessoa.</h1>
 </body>
 </body>
 </html>
