Update index1.html diwas

--- a/index1.html
+++ b/index1.html
@@ -13,6 +13,10 @@
     <img src="img/diwas.jpg" alt="" width="300"><br><br>
     <img src="img/moledj.jpg" alt="" width="400"><br>
     <h1>Estou tentando fazer fork trabalhando com projeto duma outra pessoa.</h1>
+        <h1>Estou tentando fazer fork trabalhando com projeto duma outra pessoa.</h1>
+    <h1>Estou tentando fazer fork trabalhando com projeto duma outra pessoa.</h1>
+    <h1>Estou tentando fazer fork trabalhando com projeto duma outra pessoa.</h1>
+
 </body>
 </body>
 </html>
